# meta-prompt-mcp-server

./: Dockerfile  README.md  pyproject.toml
src/meta_prompt/: __init__.py  server.py
