[project]
name = "meta-prompt-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.3.4",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "mcp[cli]>=1.9.0",
]

[project.scripts]
mcp-meta-prompt = "src.meta_prompt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
package-data = {"src.meta_prompt" = ["*"]}
